# 2017.djangocon.eu

./: .coveragerc  .gitignore  .gitlab-ci.yml  .scss-lint.yml  .travis.yml  Gemfile  Gruntfile.js  LICENSE  Makefile  README.rst  config.rb  initial_pages.json  log.py  manage.py  package.json  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  runtests.sh  setup.cfg
.gitlab/merge_request_templates/: base.md
conference/: __init__.py  apps.py  context_processors.py
conference/cfp/: __init__.py  admin.py  cms_apps.py  forms.py  models.py  tests.py  urls.py  views.py  workshop_urls.py
conference/cfp/migrations/: 0001_initial.py  0002_auto_20161105_1639.py  0002_auto_20161106_0936.py  0002_auto_20161106_1212.py  0003_auto_20161117_1853.py  (+2 more)
conference/helpers/: cms_plugins.py
conference/schedule/: __init__.py  admin.py  cms_apps.py  models.py  urls.py  views.py
config/: supervisor.tpl  uwsgi.tpl
djangocon_europe/: settings.py  settings_ci.py  settings_tests.py  urls.py  wsgi.py
djangocon_europe/templates/: 404.html  base.html  base_root.html  home.html  internal.html
styles/: style.scss
styles/00_settings/: _global.scss  _grid.scss
styles/01_tools/: _functions.scss  _mixins.scss
styles/02_elements/: _forms.scss  _general.scss  _reset.scss  _typography.scss
styles/03_objects/: _buttons.scss  _grid-utilities.scss  _grid.scss
styles/04_components/: _cast.scss  _forms.scss  _plugins.scss  _site-footer.scss  _site-header.scss  _sponsors.scss  _widget-text.scss
styles/05_layouts/: _blog.scss  _schedule.scss  _sections.scss
(+33 files in other folders)
