[flake8]
max-line-length = 119
exclude = ./.*,**/migrations/*,settings/*,**/*settings.py,manage.py,fabfile.py,conf/*,urls/*,build,.git,settings

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[isort]
line_length = 119
skip = migrations
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = conference, nephila_widgets
multi_line_output = 5
not_skip = __init__.py
